# InfoTecs_DevOps

./: .gitignore  CMakeList.txt  README.md  Readme.txt  SetUp.md  Vagrantfile  Инструкция.txt
ansible/: ansible.cfg  inventory.ini
ansible/playbooks/: docker_install.yml  sqlite_build.yml
sqlite-amalgamation-3260000/: .dockerignore  CMakeLists.txt  Dockerfile
task-8_cpp-conan/: CMakeLists.txt  conanfile.py  main.cpp  main.sh
